# ngm2root

./: .gitignore  CMakeLists.txt  README.md  main.cpp
